--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "nuxt": "^4.2.2",
     "nuxt-llms": "0.1.3",
     "nuxt-og-image": "^5.1.12",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+
+    "@oxc-minify/binding-linux-x64-gnu": "^0.99.0",
+    "@oxc-parser/binding-linux-x64-gnu": "^0.99.0",
+    "@oxc-resolver/binding-linux-x64-gnu": "^11.14.0",
+    "@oxc-transform/binding-linux-x64-gnu": "^0.99.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
