--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nuxt/ui": "^4.2.1",
     "@nuxtjs/mcp-toolkit": "0.5.1",
     "better-sqlite3": "^12.4.6",
+    "eta": "^3.5.0",
+    "jszip": "^3.10.1",
     "nuxt": "^4.2.2",
     "nuxt-llms": "0.1.3",
     "nuxt-og-image": "^5.1.12",
