--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.1",
     "@nuxtjs/mcp-toolkit": "0.5.1",
+    "@oxc-minify/binding-linux-x64-gnu": "^0.99.0",
+    "@oxc-parser/binding-linux-x64-gnu": "^0.99.0",
+    "@oxc-resolver/binding-linux-x64-gnu": "^11.14.0",
+    "@oxc-transform/binding-linux-x64-gnu": "^0.99.0",
+    "@vueuse/core": "^12.5.0",
     "better-sqlite3": "^12.4.6",
     "eta": "^3.5.0",
     "jszip": "^3.10.1",
     "nuxt": "^4.2.2",
     "nuxt-llms": "0.1.3",
     "nuxt-og-image": "^5.1.12",
-    "zod": "^4.1.13",
-
-    "@oxc-minify/binding-linux-x64-gnu": "^0.99.0",
-    "@oxc-parser/binding-linux-x64-gnu": "^0.99.0",
-    "@oxc-resolver/binding-linux-x64-gnu": "^11.14.0",
-    "@oxc-transform/binding-linux-x64-gnu": "^0.99.0"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
